# oref-tui

./: .gitignore  README.md  compile-for-pip.sh  pyproject.toml  requirements-minimal.txt  requirements.txt  tui.py
